# pandoc-cover

./: .editorconfig  .gitignore  .pylintrc  CHANGELOG.md  LICENSE  Makefile  README.md  pandoc_cover.py  pandoc_cover.sample.md  pyproject.toml  requirements.txt  sample.md
.github/workflows/: build.yml
