[project]
name = "pandoc-cover"
version = "0.1.1"
authors = [
  { name="Damien Clochard", email="damien.clochard@dalibo.com" },
]
description = "Add a PDF cover to a document using an SVG template and the pandoc metadata "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "panflute",
    "jinja2"
]

[project.urls]
"Homepage" = "https://github.com/daamien/pandoc-cover"
"Bug Tracker" = "https://github.com/daamien/pandoc-cover/issues"

[project.scripts]
pandoc-cover = 'pandoc_cover:main'

[tool.setuptools]
py-modules = ["pandoc_cover"]
